Added an element

--- a/hello.html
+++ b/hello.html
@@ -5,6 +5,7 @@
     </head>
     <body>
         <h1>This the the first level heading</h1>
+        <div>Welcome</div>
         Hello ,world.....
     </body>
 </html>
