--- a/hello.html
+++ b/hello.html
@@ -5,6 +5,7 @@
     </head>
     <body>
         <h1>This the the first level heading</h1>
+        <h2>This is heding two less smaller thn first level</h2>
         <div>Welcome</div>
         Hello ,world.....
     </body>
