--- a/hello.html
+++ b/hello.html
@@ -2,6 +2,11 @@
 <html lang="en">
     <head>
         <title>Hello!</title>
+        <style>
+            h1{
+                color:burlywood;
+            }
+        </style>
     </head>
     <body>
         <h1>This the the first level heading</h1>
