--- a/hello.html
+++ b/hello.html
@@ -4,7 +4,7 @@
         <title>Hello!</title>
     </head>
     <body>
-        <h1 style="color: burlywood;">This the the first level heading!</h1>
+        <h1 style="color: burlywood;">This the the first level heading</h1>
         <h2>This is heding two less smaller thn first level</h2>
         <div>Welcome</div>
         Hello ,world.....
