Removed inline css

--- a/hello.html
+++ b/hello.html
@@ -9,7 +9,7 @@
         </style>
     </head>
     <body>
-        <h1 style="color: burlywood;">This the the first level heading</h1>
+        <h1>This the the first level heading</h1>
         <h2>This is heding two less smaller thn first level</h2>
         <div>Welcome</div>
         Hello ,world.....
